Fix formatting issues and update code in README and notebooks

--- a/1-Introduction-to-Python/1-Variables.ipynb
+++ b/1-Introduction-to-Python/1-Variables.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'{a_number = }')"
+    "print(f\"{a_number = }\")"
    ]
   },
   {
@@ -89,8 +89,8 @@
     "a_number = 5\n",
     "another_number = a_number\n",
     "a_number = 1\n",
-    "print(f'{another_number = }')\n",
-    "print(f'{a_number = }')"
+    "print(f\"{another_number = }\")\n",
+    "print(f\"{a_number = }\")"
    ]
   },
   {
@@ -114,9 +114,9 @@
     "nb1 = 1\n",
     "nb2 = 3\n",
     "sum_nb1_2 = nb1 + nb2\n",
-    "print(f'{nb1 = }')\n",
-    "print(f'{nb2 = }')\n",
-    "print(f'{sum_nb1_2 = }')"
+    "print(f\"{nb1 = }\")\n",
+    "print(f\"{nb2 = }\")\n",
+    "print(f\"{sum_nb1_2 = }\")"
    ]
   },
   {
@@ -190,18 +190,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from random import randint # To generate random numbers so you can't really cheat\n",
+    "from random import (\n",
+    "    randint,\n",
+    ")  # To generate random numbers so you can't really cheat\n",
+    "\n",
     "nb1 = randint(0, 5)\n",
     "nb2 = randint(6, 10)\n",
-    "print('before')\n",
-    "print(f'{nb1 = }')\n",
-    "print(f'{nb2 = }')\n",
-    "'''\n",
+    "print(\"before\")\n",
+    "print(f\"{nb1 = }\")\n",
+    "print(f\"{nb2 = }\")\n",
+    "\"\"\"\n",
     "To do: swap a and b values\n",
-    "'''\n",
-    "print('after:')\n",
-    "print(f'{nb1 = }')\n",
-    "print(f'{nb2 = }')"
+    "\"\"\"\n",
+    "print(\"after:\")\n",
+    "print(f\"{nb1 = }\")\n",
+    "print(f\"{nb2 = }\")"
    ]
   }
  ],
