--- a/1-Introduction-to-Python/4-Some-Exercises.ipynb
+++ b/1-Introduction-to-Python/4-Some-Exercises.ipynb
@@ -68,12 +68,12 @@
    "source": [
     "mu_a = 2.8e-4\n",
     "mu_i = 5e-3\n",
-    "tau = .1\n",
-    "k = -.005\n",
+    "tau = 0.1\n",
+    "k = -0.005\n",
     "size = 100\n",
-    "dx = dy = 2. / size\n",
+    "dx = dy = 2.0 / size\n",
     "T = 9.0\n",
-    "dt = .001\n",
+    "dt = 0.001\n",
     "n = int(T / dt)"
    ]
   },
@@ -125,8 +125,8 @@
    "source": [
     "a = 0.01\n",
     "# Write here the code necessary\n",
-    "print(f'{a                            = }')\n",
-    "print( 'Expected value (for a = 0.1) : 0.9971706727639877')"
+    "print(f\"{a                            = }\")\n",
+    "print(\"Expected value (for a = 0.1) : 0.9971706727639877\")"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "da_alone??"
+    "??da_alone"
    ]
   },
   {
@@ -168,9 +168,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = [.01]\n",
-    "print(f'Last value of A (A[-1])          --> {A[-1]}')\n",
-    "print( 'Expected value (for A[0] = 0.01) --> 0.9971706727639877')"
+    "A = [0.01]\n",
+    "print(f\"Last value of A (A[-1])          --> {A[-1]}\")\n",
+    "print(\"Expected value (for A[0] = 0.01) --> 0.9971706727639877\")"
    ]
   },
   {
@@ -222,11 +222,11 @@
     "A = [0.4]\n",
     "I = [0.15]\n",
     "# Write the code here\n",
-    "print('For the starting values of A[0]=0.4 and I[0]=0.15:')\n",
-    "print(f'Last value of A --> {A[-1]}')\n",
-    "print( 'Expected value  --> 0.17217946292184916')\n",
-    "print(f'Last value of I --> {I[-1]}')\n",
-    "print( 'Expected value  --> 0.1733148395515316')"
+    "print(\"For the starting values of A[0]=0.4 and I[0]=0.15:\")\n",
+    "print(f\"Last value of A --> {A[-1]}\")\n",
+    "print(\"Expected value  --> 0.17217946292184916\")\n",
+    "print(f\"Last value of I --> {I[-1]}\")\n",
+    "print(\"Expected value  --> 0.1733148395515316\")"
    ]
   },
   {
