--- a/1-Introduction-to-Python/5-0-Introduction-function.ipynb
+++ b/1-Introduction-to-Python/5-0-Introduction-function.ipynb
@@ -111,20 +111,21 @@
     "    \"\"\"\n",
     "    This function returns the highest fibonacci\n",
     "    number which is lower than n.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        n (int): upper boundary for the fibonacci number\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "        (int): higher fibo number lower than n\n",
     "    \"\"\"\n",
     "    a, b = 0, 1\n",
-    "    while b<n:\n",
-    "        a, b = b, a+b\n",
+    "    while b < n:\n",
+    "        a, b = b, a + b\n",
     "    return a\n",
     "\n",
+    "\n",
     "print(fib(2000))\n",
-    "fib?"
+    "?fib"
    ]
   },
   {
@@ -143,12 +144,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_AI(): # Don't forget to add arguments\n",
-    "    # A, I = [a], [i] \n",
+    "def compute_AI():  # Don't forget to add arguments\n",
+    "    # A, I = [a], [i]\n",
     "    A, I = [], []\n",
     "    # Uncoment above and\n",
     "    # Do something here\n",
     "    return A, I\n",
+    "\n",
     "\n",
     "A, I = compute_AI()\n",
     "plot_concentration_1cell(A, I)"
@@ -201,11 +203,15 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
+    "\n",
     "def foo(a: int, b: np.ndarray, c: bool, d: str) -> (dict, list, float):\n",
     "    # Function that does something\n",
-    "    a, b, c = {1:2}, [1, 2], 3.14\n",
+    "    a, b, c = {1: 2}, [1, 2], 3.14\n",
     "    return a, b, c\n",
-    "foo?"
+    "\n",
+    "\n",
+    "?foo"
    ]
   }
  ],
