--- a/1-Introduction-to-Python/5-1-File-manipulation.ipynb
+++ b/1-Introduction-to-Python/5-1-File-manipulation.ipynb
@@ -64,20 +64,22 @@
     "# Carry over here the previously declared variables and the code from the previous exercises\n",
     "mu_a = 2.8e-4\n",
     "mu_i = 5e-3\n",
-    "tau = .1\n",
-    "k = -.005\n",
+    "tau = 0.1\n",
+    "k = -0.005\n",
     "size = 100\n",
-    "dx = dy = 2. / size\n",
+    "dx = dy = 2.0 / size\n",
     "T = 9.0\n",
-    "dt = .001\n",
+    "dt = 0.001\n",
     "n = int(T / dt)\n",
     "\n",
-    "def compute_AI(): # Don't forget to add arguments\n",
-    "    # A, I = [a], [i] \n",
+    "\n",
+    "def compute_AI():  # Don't forget to add arguments\n",
+    "    # A, I = [a], [i]\n",
     "    A, I = [0], [0]\n",
     "    # Uncoment above and\n",
     "    # Do something here\n",
     "    return A, I\n",
+    "\n",
     "\n",
     "A, I = compute_AI()"
    ]
@@ -89,8 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s1 = f'test_a{A[0]}_i{I[0]}_dt{dt}'\n",
-    "s2 = 'test_a{A[0]}_i{I[0]}_dt{dt}'\n",
+    "s1 = f\"test_a{A[0]}_i{I[0]}_dt{dt}\"\n",
+    "s2 = \"test_a{A[0]}_i{I[0]}_dt{dt}\"\n",
     "print(s1)\n",
     "print(s2)"
    ]
@@ -126,7 +128,8 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "folder = Path('question_7')\n",
+    "\n",
+    "folder = Path(\"question_7\")\n",
     "if not folder.exists():\n",
     "    Path.mkdir(folder)"
    ]
@@ -159,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Our current path:')\n",
+    "print(\"Our current path:\")\n",
     "print(Path.cwd())"
    ]
   },
@@ -191,9 +194,9 @@
    "source": [
     "## folder is the path previously created\n",
     "# Concatenation of two Paths\n",
-    "print(folder / Path('test_a0.4_i0.15_dt0.001.png'))\n",
+    "print(folder / Path(\"test_a0.4_i0.15_dt0.001.png\"))\n",
     "# Concatenation of a Path and a str (same result)\n",
-    "print(folder / 'test_a0.4_i0.15_dt0.001.png')"
+    "print(folder / \"test_a0.4_i0.15_dt0.001.png\")"
    ]
   },
   {
@@ -220,12 +223,14 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "folder = Path('question_7')\n",
-    "for test_tau in np.linspace(.05, 1, 5):\n",
+    "\n",
+    "folder = Path(\"question_7\")\n",
+    "for test_tau in np.linspace(0.05, 1, 5):\n",
     "    for test_k in np.linspace(-1, 1, 5):\n",
-    "#         A, I = answer_results(4, A=0.4, I=0.15, dt=dt, k=test_k, tau=test_tau, n=n)\n",
-    "        plot_concentration_1cell(A, I,\n",
-    "                                 save_path=folder / f'k{test_k}_tau{test_tau}.png')"
+    "        #         A, I = answer_results(4, A=0.4, I=0.15, dt=dt, k=test_k, tau=test_tau, n=n)\n",
+    "        plot_concentration_1cell(\n",
+    "            A, I, save_path=folder / f\"k{test_k}_tau{test_tau}.png\"\n",
+    "        )"
    ]
   },
   {
@@ -248,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A, I = answer_results(4, A=0.4, I=0.15, dt=.01, k=.05, tau=2, n=n)\n",
+    "A, I = answer_results(4, A=0.4, I=0.15, dt=0.01, k=0.05, tau=2, n=n)\n",
     "plot_concentration_1cell(A, I)"
    ]
   },
@@ -313,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = Path('question_7')\n",
+    "p = Path(\"question_7\")\n",
     "for file in p.iterdir():\n",
     "    ## Do things here\n",
     "    print(file)"
