--- a/1-Introduction-to-Python/6-2-Adding-lateral-diffusion.ipynb
+++ b/1-Introduction-to-Python/6-2-Adding-lateral-diffusion.ipynb
@@ -110,12 +110,12 @@
     "\n",
     "mu_a = 2.8e-4\n",
     "mu_i = 5e-3\n",
-    "tau = .1\n",
-    "k = -.005\n",
+    "tau = 0.1\n",
+    "k = -0.005\n",
     "size = 100\n",
-    "dx = dy = 2. / size\n",
+    "dx = dy = 2.0 / size\n",
     "T = 9.0\n",
-    "dt = .001\n",
+    "dt = 0.001\n",
     "n = int(T / dt)"
    ]
   },
@@ -131,14 +131,15 @@
     "np.random.seed(1)\n",
     "I = np.random.random(100)\n",
     "\n",
+    "\n",
     "def dA_I(A, I, dt, k, tau, dx, mu_a, mu_i):\n",
     "    new_A = np.zeros_like(A)\n",
     "    new_I = np.zeros_like(I)\n",
     "    # Do something here\n",
     "    return new_A, new_I\n",
     "\n",
-    "new_A, new_I = dA_I(A, I, dt=dt, k=k, tau=tau,\n",
-    "                    dx=dx, mu_a=mu_a, mu_i=mu_i)"
+    "\n",
+    "new_A, new_I = dA_I(A, I, dt=dt, k=k, tau=tau, dx=dx, mu_a=mu_a, mu_i=mu_i)"
    ]
   },
   {
@@ -149,15 +150,16 @@
    "outputs": [],
    "source": [
     "## Checking wether your results are correct:\n",
-    "A_ans, I_ans = answer_results(14, A=A, I=I, dt=dt, k=k, tau=tau,\n",
-    "                              dx=dx, mu_a=mu_a, mu_i=mu_i)\n",
+    "A_ans, I_ans = answer_results(\n",
+    "    14, A=A, I=I, dt=dt, k=k, tau=tau, dx=dx, mu_a=mu_a, mu_i=mu_i\n",
+    ")\n",
     "\n",
-    "if np.alltrue(A_ans==new_A) and np.alltrue(I_ans==new_I):\n",
-    "    print('My results are the same as what is expected')\n",
+    "if np.alltrue(A_ans == new_A) and np.alltrue(I_ans == new_I):\n",
+    "    print(\"My results are the same as what is expected\")\n",
     "elif np.allclose(A_ans, new_A) and np.allclose(I_ans, new_I):\n",
-    "    print('My results are all close to what is expected')\n",
+    "    print(\"My results are all close to what is expected\")\n",
     "else:\n",
-    "    print('My results are different to what was expected')"
+    "    print(\"My results are different to what was expected\")"
    ]
   },
   {
@@ -188,8 +190,16 @@
     "\n",
     "for t in range(1, n):\n",
     "    # do what is necessary\n",
-    "    A[:, t], I[:, t] = dA_I(A[:, t-1], I[:, t-1], dt=dt, k=k, tau=tau,\n",
-    "                            dx=dx, mu_a=mu_a, mu_i=mu_i)"
+    "    A[:, t], I[:, t] = dA_I(\n",
+    "        A[:, t - 1],\n",
+    "        I[:, t - 1],\n",
+    "        dt=dt,\n",
+    "        k=k,\n",
+    "        tau=tau,\n",
+    "        dx=dx,\n",
+    "        mu_a=mu_a,\n",
+    "        mu_i=mu_i,\n",
+    "    )"
    ]
   },
   {
@@ -227,8 +237,16 @@
     "\n",
     "for t in range(1, n):\n",
     "    # do what is necessary\n",
-    "    A[:, t], I[:, t] = dA_I(A[:, t-1], I[:, t-1], dt=.01, k=.05, tau=2,\n",
-    "                            dx=.0005, mu_a=mu_a, mu_i=mu_i)\n",
+    "    A[:, t], I[:, t] = dA_I(\n",
+    "        A[:, t - 1],\n",
+    "        I[:, t - 1],\n",
+    "        dt=0.01,\n",
+    "        k=0.05,\n",
+    "        tau=2,\n",
+    "        dx=0.0005,\n",
+    "        mu_a=mu_a,\n",
+    "        mu_i=mu_i,\n",
+    "    )\n",
     "plot_concentration_1D(A, step=100)"
    ]
   },
