--- a/1-Introduction-to-Python/7-From-1D-to-2D.ipynb
+++ b/1-Introduction-to-Python/7-From-1D-to-2D.ipynb
@@ -40,6 +40,7 @@
    "source": [
     "# importing the numpy library\n",
     "import numpy as np\n",
+    "\n",
     "# importing the useful functions\n",
     "from Resources.UsefulFunctions import *\n",
     "from Resources.Answers import answer, hint\n",
@@ -47,12 +48,12 @@
     "# and carrying over the previously declared variables\n",
     "mu_a = 2.8e-4\n",
     "mu_i = 5e-3\n",
-    "tau = .1\n",
-    "k = -.005\n",
+    "tau = 0.1\n",
+    "k = -0.005\n",
     "size = 100\n",
-    "dx = dy = 2. / size\n",
+    "dx = dy = 2.0 / size\n",
     "T = 9.0\n",
-    "dt = .001\n",
+    "dt = 0.001\n",
     "n = int(T / dt)"
    ]
   },
@@ -173,10 +174,7 @@
     "# kernel = [[0, 0, 0],\n",
     "#           [0, 0, 0],\n",
     "#           [0, 0, 0]]\n",
-    "kernel = np.array([[0, 1, 0],\n",
-    "                   [1, 0, 1],\n",
-    "                   [0, 1, 0]])\n",
-    "    "
+    "kernel = np.array([[0, 1, 0], [1, 0, 1], [0, 1, 0]])"
    ]
   },
   {
@@ -195,7 +193,8 @@
    "outputs": [],
    "source": [
     "from scipy.ndimage import convolve\n",
-    "convolve?"
+    "\n",
+    "?convolve"
    ]
   },
   {
@@ -213,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_cell = convolve(A[..., 0], kernel, mode='constant', cval=0)"
+    "to_cell = convolve(A[..., 0], kernel, mode=\"constant\", cval=0)"
    ]
   },
   {
@@ -276,8 +275,7 @@
     "## Here you write the function\n",
     "def diffusion(arr, nb_neighbs, kernel, mu, dx, dy):\n",
     "    arr_diff = np.zeros_like(arr)\n",
-    "    return arr_diff\n",
-    "    "
+    "    return arr_diff"
    ]
   },
   {
@@ -292,28 +290,36 @@
     "np.random.seed(1)\n",
     "I[:, :, 0] = np.random.random((size, size))\n",
     "\n",
-    "kernel = np.array([[0, 1, 0],\n",
-    "                   [1, 0, 1],\n",
-    "                   [0, 1, 0]])\n",
+    "kernel = np.array([[0, 1, 0], [1, 0, 1], [0, 1, 0]])\n",
     "mask = np.ones_like(A[:, :, 0])\n",
-    "nb_neighbs = convolve(mask, kernel, mode='constant', cval=0)\n",
+    "nb_neighbs = convolve(mask, kernel, mode=\"constant\", cval=0)\n",
     "\n",
     "diff_A = diffusion(A[..., 0], nb_neighbs, kernel, mu_a, dx, dy)\n",
     "diff_I = diffusion(I[..., 0], nb_neighbs, kernel, mu_i, dx, dy)\n",
-    "test_diff_A = answer_results(16, arr=A[:, :, 0], \n",
-    "                             nb_neighbs=nb_neighbs,\n",
-    "                             kernel=kernel, mu=mu_a,\n",
-    "                             dx=dx, dy=dy)\n",
-    "test_diff_I = answer_results(16, arr=I[:, :, 0], \n",
-    "                             nb_neighbs=nb_neighbs,\n",
-    "                             kernel=kernel, mu=mu_i,\n",
-    "                             dx=dx, dy=dy)\n",
-    "if np.alltrue(diff_A==test_diff_A) and np.alltrue(diff_I==test_diff_I):\n",
-    "    print('My results are the same as what is expected')\n",
+    "test_diff_A = answer_results(\n",
+    "    16,\n",
+    "    arr=A[:, :, 0],\n",
+    "    nb_neighbs=nb_neighbs,\n",
+    "    kernel=kernel,\n",
+    "    mu=mu_a,\n",
+    "    dx=dx,\n",
+    "    dy=dy,\n",
+    ")\n",
+    "test_diff_I = answer_results(\n",
+    "    16,\n",
+    "    arr=I[:, :, 0],\n",
+    "    nb_neighbs=nb_neighbs,\n",
+    "    kernel=kernel,\n",
+    "    mu=mu_i,\n",
+    "    dx=dx,\n",
+    "    dy=dy,\n",
+    ")\n",
+    "if np.alltrue(diff_A == test_diff_A) and np.alltrue(diff_I == test_diff_I):\n",
+    "    print(\"My results are the same as what is expected\")\n",
     "elif np.allclose(diff_A, test_diff_A) and np.allclose(diff_I, test_diff_I):\n",
-    "    print('My results are all close to what is expected')\n",
+    "    print(\"My results are all close to what is expected\")\n",
     "else:\n",
-    "    print('My results are different to what was expected')"
+    "    print(\"My results are different to what was expected\")"
    ]
   },
   {
@@ -337,26 +343,29 @@
    "source": [
     "import numpy as np\n",
     "from scipy.ndimage import convolve\n",
+    "\n",
     "mu_a = 2.8e-4\n",
     "mu_i = 5e-3\n",
-    "tau = .1\n",
-    "k = -.005\n",
+    "tau = 0.1\n",
+    "k = -0.005\n",
     "size = 100\n",
-    "dx = dy = 2. / size\n",
+    "dx = dy = 2.0 / size\n",
     "T = 9.0\n",
-    "dt = .001\n",
+    "dt = 0.001\n",
+    "\n",
     "\n",
     "def diffusion(arr, nb_neighbs, kernel, mu, dx, dy):\n",
-    "    to_cell = convolve(arr, kernel, mode='constant', cval=0)\n",
-    "    from_cell = nb_neighbs*arr\n",
-    "    out = mu*(to_cell - from_cell)/(dx*dy)\n",
+    "    to_cell = convolve(arr, kernel, mode=\"constant\", cval=0)\n",
+    "    from_cell = nb_neighbs * arr\n",
+    "    out = mu * (to_cell - from_cell) / (dx * dy)\n",
     "    return out\n",
     "\n",
+    "\n",
     "# Write the function here:\n",
-    "def compute_turing(dt, k, tau, size, T,\n",
-    "                   mu_a, mu_i, dx, dy, seed=0):\n",
+    "def compute_turing(dt, k, tau, size, T, mu_a, mu_i, dx, dy, seed=0):\n",
     "    ...\n",
-    "    \n",
+    "\n",
+    "\n",
     "# A, I = compute_turing(dt, k, tau, size, T, mu_a, mu_i, dx, dy)"
    ]
   },
@@ -382,10 +391,11 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "# Recomputing the previous results if necessary. Comment if it is not necessary.\n",
-    "A, I = answer_results(17, dt=dt, k=k, tau=tau,\n",
-    "                      size=size, T=T, mu_a=mu_a,\n",
-    "                      mu_i=mu_i, dx=dx, dy=dy)"
+    "A, I = answer_results(\n",
+    "    17, dt=dt, k=k, tau=tau, size=size, T=T, mu_a=mu_a, mu_i=mu_i, dx=dx, dy=dy\n",
+    ")"
    ]
   },
   {
@@ -436,15 +446,15 @@
    "source": [
     "nb_TP = 9\n",
     "n = A.shape[-1]\n",
-    "x_dim = int(nb_TP**.5)\n",
-    "y_dim = nb_TP//x_dim\n",
-    "if  x_dim*y_dim < nb_TP:\n",
+    "x_dim = int(nb_TP**0.5)\n",
+    "y_dim = nb_TP // x_dim\n",
+    "if x_dim * y_dim < nb_TP:\n",
     "    y_dim += 1\n",
     "fig, axes = plt.subplots(x_dim, y_dim, figsize=(6, 6))\n",
     "for i, ax in enumerate(axes.flatten()):\n",
-    "    ax.imshow(A[..., int(i*n/nb_TP)])\n",
+    "    ax.imshow(A[..., int(i * n / nb_TP)])\n",
     "    ax.set_axis_off()\n",
-    "    ax.set_title(f'Time {int(i*n/nb_TP)*dt}')\n",
+    "    ax.set_title(f\"Time {int(i*n/nb_TP)*dt}\")\n",
     "fig.tight_layout()\n",
     "# int(nb_TP**.5)"
    ]
@@ -468,23 +478,26 @@
     "from IPython.display import HTML\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "ax.axis('off')\n",
-    "im = ax.imshow(A[..., 0], interpolation='bilinear');\n",
+    "ax.axis(\"off\")\n",
+    "im = ax.imshow(A[..., 0], interpolation=\"bilinear\")\n",
     "fig.tight_layout()\n",
     "\n",
+    "\n",
     "def init():\n",
-    "    im.set_data(A_anim[..., 0]);\n",
-    "    return(im,)\n",
+    "    im.set_data(A_anim[..., 0])\n",
+    "    return (im,)\n",
+    "\n",
     "\n",
     "def animate(i):\n",
-    "    im.set_data(A_anim[...,i]);\n",
-    "    return(im,)\n",
+    "    im.set_data(A_anim[..., i])\n",
+    "    return (im,)\n",
+    "\n",
     "\n",
     "nb_times_im = 100\n",
-    "A_anim = A[..., ::A.shape[-1]//nb_times_im]\n",
-    "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
-    "                               frames=nb_times_im, interval=25, \n",
-    "                               blit=True);\n",
+    "A_anim = A[..., :: A.shape[-1] // nb_times_im]\n",
+    "anim = animation.FuncAnimation(\n",
+    "    fig, animate, init_func=init, frames=nb_times_im, interval=25, blit=True\n",
+    ")\n",
     "\n",
     "HTML(anim.to_jshtml())"
    ]
@@ -496,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anim.save('My-first-Turing-Pattern.gif')"
+    "anim.save(\"My-first-Turing-Pattern.gif\")"
    ]
   }
  ],
