--- a/2-Data-handling-and-visu/03-04-Figures-and-Subplots.ipynb
+++ b/2-Data-handling-and-visu/03-04-Figures-and-Subplots.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = np.linspace(-np.pi, 2*np.pi, 30)\n",
+    "X = np.linspace(-np.pi, 2 * np.pi, 30)\n",
     "Y = np.sin(X)\n",
     "fig = plt.figure(figsize=(10, 8))\n",
     "ax = fig.add_subplot(aspect=1)\n",
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(10, 8), subplot_kw={'aspect':1})\n",
+    "fig, ax = plt.subplots(figsize=(10, 8), subplot_kw={\"aspect\": 1})\n",
     "ax.plot(X, Y)"
    ]
   },
@@ -86,10 +86,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(10, 8), subplot_kw={'aspect':1})\n",
+    "fig, ax = plt.subplots(figsize=(10, 8), subplot_kw={\"aspect\": 1})\n",
     "ax.plot(X, Y)\n",
-    "ax.set_xlim(-np.pi, 2*np.pi)\n",
-    "ax.set_ylabel('Values')"
+    "ax.set_xlim(-np.pi, 2 * np.pi)\n",
+    "ax.set_ylabel(\"Values\")"
    ]
   },
   {
@@ -136,10 +136,10 @@
    "source": [
     "# Do that here\n",
     "fig, ax = plt.subplots(figsize=(6, 5))\n",
-    "ax.plot(X, Y, label='legend')\n",
-    "ax.plot(X+.5, Y, label='legend2')\n",
-    "ax.set_xlabel('X label')\n",
-    "ax.set_ylabel('Y label')\n",
+    "ax.plot(X, Y, label=\"legend\")\n",
+    "ax.plot(X + 0.5, Y, label=\"legend2\")\n",
+    "ax.set_xlabel(\"X label\")\n",
+    "ax.set_ylabel(\"Y label\")\n",
     "ax.legend()"
    ]
   },
@@ -160,12 +160,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = np.linspace(-np.pi, 2*np.pi, 30)\n",
+    "X = np.linspace(-np.pi, 2 * np.pi, 30)\n",
     "Y = np.sin(X)\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(10, 8), subplot_kw={'aspect':1})\n",
+    "fig, ax = plt.subplots(figsize=(10, 8), subplot_kw={\"aspect\": 1})\n",
     "ax.plot(X, Y)\n",
-    "ax.set_xlabel(r'Some label $[\\frac{1}{\\mu m^2}]$', size=20);"
+    "ax.set_xlabel(r\"Some label $[\\frac{1}{\\mu m^2}]$\", size=20);"
    ]
   },
   {
@@ -204,14 +204,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X1 = np.linspace(np.pi/2, 5*np.pi/2)\n",
-    "X2 = np.linspace(0, 2*np.pi)\n",
+    "X1 = np.linspace(np.pi / 2, 5 * np.pi / 2)\n",
+    "X2 = np.linspace(0, 2 * np.pi)\n",
     "Y1 = np.sin(X1)\n",
     "Y2 = np.cos(X2)\n",
     "\n",
     "fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(10, 5))\n",
-    "ax[0].plot(X1, Y1, '-')\n",
-    "ax[1].plot(X2, Y2, '-')"
+    "ax[0].plot(X1, Y1, \"-\")\n",
+    "ax[1].plot(X2, Y2, \"-\")"
    ]
   },
   {
@@ -229,14 +229,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X1 = np.linspace(np.pi/4, 5*np.pi/4)\n",
-    "X2 = np.linspace(0, 2*np.pi)\n",
-    "Y1 = np.sin(X1*2)/2\n",
+    "X1 = np.linspace(np.pi / 4, 5 * np.pi / 4)\n",
+    "X2 = np.linspace(0, 2 * np.pi)\n",
+    "Y1 = np.sin(X1 * 2) / 2\n",
     "Y2 = np.cos(X2)\n",
     "\n",
     "fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(10, 5))\n",
-    "ax[0].plot(X1, Y1, '-')\n",
-    "ax[1].plot(X2, Y2, '-')"
+    "ax[0].plot(X1, Y1, \"-\")\n",
+    "ax[1].plot(X2, Y2, \"-\")"
    ]
   },
   {
@@ -254,14 +254,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X1 = np.linspace(np.pi/4, 5*np.pi/4)\n",
-    "X2 = np.linspace(0, 2*np.pi)\n",
-    "Y1 = np.sin(X1*2)/2\n",
+    "X1 = np.linspace(np.pi / 4, 5 * np.pi / 4)\n",
+    "X2 = np.linspace(0, 2 * np.pi)\n",
+    "Y1 = np.sin(X1 * 2) / 2\n",
     "Y2 = np.cos(X2)\n",
     "\n",
-    "fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(10, 5), sharex=True, sharey=True)\n",
-    "ax[0].plot(X1, Y1, '-')\n",
-    "ax[1].plot(X2, Y2, '-')"
+    "fig, ax = plt.subplots(\n",
+    "    nrows=2, ncols=1, figsize=(10, 5), sharex=True, sharey=True\n",
+    ")\n",
+    "ax[0].plot(X1, Y1, \"-\")\n",
+    "ax[1].plot(X2, Y2, \"-\")"
    ]
   },
   {
@@ -279,14 +281,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X1 = np.linspace(np.pi/4, 5*np.pi/4)\n",
-    "X2 = np.linspace(0, 2*np.pi)\n",
-    "Y1 = np.sin(X1*2)/2\n",
+    "X1 = np.linspace(np.pi / 4, 5 * np.pi / 4)\n",
+    "X2 = np.linspace(0, 2 * np.pi)\n",
+    "Y1 = np.sin(X1 * 2) / 2\n",
     "Y2 = np.cos(X2)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 3))\n",
-    "ax.plot(X1, Y1, '-', label='sin', lw=5)\n",
-    "ax.plot(X2, Y2, '-o', label='cosin', lw=3, ms=10, alpha=.5)\n",
+    "ax.plot(X1, Y1, \"-\", label=\"sin\", lw=5)\n",
+    "ax.plot(X2, Y2, \"-o\", label=\"cosin\", lw=3, ms=10, alpha=0.5)\n",
     "ax.legend()"
    ]
   },
@@ -307,15 +309,15 @@
    },
    "outputs": [],
    "source": [
-    "X1 = np.linspace(0, 2*np.pi)\n",
-    "X2 = np.linspace(0, 2*np.pi)\n",
-    "Y1 = np.sin(X1*2)/2\n",
+    "X1 = np.linspace(0, 2 * np.pi)\n",
+    "X2 = np.linspace(0, 2 * np.pi)\n",
+    "Y1 = np.sin(X1 * 2) / 2\n",
     "Y2 = np.cos(X2)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 3))\n",
-    "ax.plot(X1, Y1, '-', label='sin', lw=5)\n",
-    "ax.plot(X2, Y2, '-', label='cosin', lw=3, alpha=.5)\n",
-    "ax.fill_between(X1[5:30], Y1[5:30], Y2[5:30], color='y')\n",
+    "ax.plot(X1, Y1, \"-\", label=\"sin\", lw=5)\n",
+    "ax.plot(X2, Y2, \"-\", label=\"cosin\", lw=3, alpha=0.5)\n",
+    "ax.fill_between(X1[5:30], Y1[5:30], Y2[5:30], color=\"y\")\n",
     "ax.legend()"
    ]
   }
