--- a/2-Data-handling-and-visu/07-08-Saving-and-Color-maps.ipynb
+++ b/2-Data-handling-and-visu/07-08-Saving-and-Color-maps.ipynb
@@ -29,20 +29,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X1 = np.linspace(0, 2*np.pi)\n",
-    "X2 = np.linspace(0, 2*np.pi)\n",
-    "Y1 = np.sin(X1*2)/2\n",
+    "X1 = np.linspace(0, 2 * np.pi)\n",
+    "X2 = np.linspace(0, 2 * np.pi)\n",
+    "Y1 = np.sin(X1 * 2) / 2\n",
     "Y2 = np.cos(X2)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 3))\n",
-    "ax.plot(X1, Y1, '-', label='sin', lw=5)\n",
-    "ax.plot(X2, Y2, '-', label='cosin', lw=3, alpha=.5)\n",
-    "ax.fill_between(X1[5:30], Y1[5:30], Y2[5:30], color='y')\n",
+    "ax.plot(X1, Y1, \"-\", label=\"sin\", lw=5)\n",
+    "ax.plot(X2, Y2, \"-\", label=\"cosin\", lw=3, alpha=0.5)\n",
+    "ax.fill_between(X1[5:30], Y1[5:30], Y2[5:30], color=\"y\")\n",
     "sns.despine(trim=True, offset=15, ax=ax)\n",
-    "ax.legend();\n",
-    "fig.savefig('Sin-test.pdf')\n",
-    "fig.savefig('Sin-test.png')\n",
-    "fig.savefig('Sin-test.jpeg')"
+    "ax.legend()\n",
+    "fig.savefig(\"Sin-test.pdf\")\n",
+    "fig.savefig(\"Sin-test.png\")\n",
+    "fig.savefig(\"Sin-test.jpeg\")"
    ]
   },
   {
@@ -61,19 +61,20 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
-    "X1 = np.linspace(0, 2*np.pi)\n",
-    "X2 = np.linspace(0, 2*np.pi)\n",
-    "Y1 = np.sin(X1*2)/2\n",
+    "\n",
+    "X1 = np.linspace(0, 2 * np.pi)\n",
+    "X2 = np.linspace(0, 2 * np.pi)\n",
+    "Y1 = np.sin(X1 * 2) / 2\n",
     "Y2 = np.cos(X2)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 3))\n",
-    "ax.plot(X1, Y1, '-', label='sin', lw=5)\n",
-    "ax.plot(X2, Y2, '-', label='cosin', lw=3, alpha=.5)\n",
-    "ax.fill_between(X1[5:30], Y1[5:30], Y2[5:30], color='y')\n",
+    "ax.plot(X1, Y1, \"-\", label=\"sin\", lw=5)\n",
+    "ax.plot(X2, Y2, \"-\", label=\"cosin\", lw=3, alpha=0.5)\n",
+    "ax.fill_between(X1[5:30], Y1[5:30], Y2[5:30], color=\"y\")\n",
     "sns.despine(trim=True, offset=15, ax=ax)\n",
-    "ax.legend();\n",
+    "ax.legend()\n",
     "fig.tight_layout()\n",
-    "fig.savefig('Sin-test-2.png')"
+    "fig.savefig(\"Sin-test-2.png\")"
    ]
   },
   {
@@ -110,14 +111,14 @@
    "outputs": [],
    "source": [
     "# here, we get the colormap\n",
-    "cmap = mpl.cm.get_cmap('viridis')\n",
+    "cmap = mpl.cm.get_cmap(\"viridis\")\n",
     "\n",
-    "X = np.linspace(0, 2*np.pi)\n",
+    "X = np.linspace(0, 2 * np.pi)\n",
     "nb_curves = 30\n",
     "fig, ax = plt.subplots(figsize=(10, 8))\n",
     "for i in range(nb_curves):\n",
-    "    curve = np.sin(X + i*2*np.pi/nb_curves)\n",
-    "    color = cmap(i/nb_curves)\n",
+    "    curve = np.sin(X + i * 2 * np.pi / nb_curves)\n",
+    "    color = cmap(i / nb_curves)\n",
     "    ax.plot(curve, color=color)"
    ]
   },
@@ -146,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mpl.cm.get_cmap('Spectral')"
+    "mpl.cm.get_cmap(\"Spectral\")"
    ]
   },
   {
@@ -174,7 +175,8 @@
    "source": [
     "np.random.seed(1)\n",
     "from Resources.UsefulFunctions import build_curve\n",
-    "build_curve?"
+    "\n",
+    "?build_curve"
    ]
   },
   {
