--- a/2-Data-handling-and-visu/10-11-Boxplots-Violinplots-and-Scatter-plots.ipynb
+++ b/2-Data-handling-and-visu/10-11-Boxplots-Violinplots-and-Scatter-plots.ipynb
@@ -24,7 +24,7 @@
     "mean = np.random.uniform(-10, 10, size=5)\n",
     "std = np.random.uniform(1, 5, size=5)\n",
     "data = np.random.normal(loc=mean, scale=std, size=(1000, 5))\n",
-    "labels = [f'Mean: {m:.2f}, std: {s:.2f}' for m, s in zip(mean, std)]"
+    "labels = [f\"Mean: {m:.2f}, std: {s:.2f}\" for m, s in zip(mean, std)]"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(6, 5))\n",
     "ax.boxplot(data)\n",
-    "ax.set_xticklabels(labels, rotation=30, ha='right');"
+    "ax.set_xticklabels(labels, rotation=30, ha=\"right\");"
    ]
   },
   {
@@ -108,8 +108,8 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(6, 5))\n",
-    "ax.violinplot(data, vert=False);\n",
-    "ax.set_yticks(range(1, data.shape[1]+1))\n",
+    "ax.violinplot(data, vert=False)\n",
+    "ax.set_yticks(range(1, data.shape[1] + 1))\n",
     "ax.set_yticklabels(labels);"
    ]
   },
@@ -129,7 +129,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(6, 5))\n",
-    "ax.boxplot(data, labels=labels, vert=False, zorder=100, sym='')\n",
+    "ax.boxplot(data, labels=labels, vert=False, zorder=100, sym=\"\")\n",
     "ax.violinplot(data, showextrema=False, vert=False);"
    ]
   },
@@ -162,9 +162,9 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(3, 1, figsize=(8, 5), sharex=True)\n",
-    "ax[0].boxplot(d_multi, vert=False, widths=.8);\n",
-    "ax[1].violinplot(d_multi, showextrema=False, vert=False);\n",
-    "ax[2].hist(d_multi);\n",
+    "ax[0].boxplot(d_multi, vert=False, widths=0.8)\n",
+    "ax[1].violinplot(d_multi, showextrema=False, vert=False)\n",
+    "ax[2].hist(d_multi)\n",
     "fig.tight_layout()"
    ]
   },
@@ -186,13 +186,13 @@
    },
    "outputs": [],
    "source": [
-    "X = np.random.normal(-10, 15, size = 500)\n",
-    "Y = np.random.normal(0, 5, size = 500)\n",
-    "X = np.hstack([X, np.random.normal(80, 10, size = 200)])\n",
-    "Y = np.hstack([Y, np.random.normal(30, 20, size = 200)])\n",
+    "X = np.random.normal(-10, 15, size=500)\n",
+    "Y = np.random.normal(0, 5, size=500)\n",
+    "X = np.hstack([X, np.random.normal(80, 10, size=200)])\n",
+    "Y = np.hstack([Y, np.random.normal(30, 20, size=200)])\n",
     "fig, ax = plt.subplots(figsize=(8, 5))\n",
     "ax.scatter(X, Y)\n",
-    "ax.set_aspect('equal')"
+    "ax.set_aspect(\"equal\")"
    ]
   },
   {
@@ -210,12 +210,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmap = mpl.cm.get_cmap('viridis')\n",
+    "cmap = mpl.cm.get_cmap(\"viridis\")\n",
     "colors = np.linspace(0, 1, 700)\n",
     "sizes = np.linspace(5, 100, 700)\n",
     "fig, ax = plt.subplots(figsize=(8, 5))\n",
-    "ax.scatter(X, Y, color=cmap(colors), s=sizes, alpha=.6, edgecolor='k')\n",
-    "ax.set_aspect('equal')"
+    "ax.scatter(X, Y, color=cmap(colors), s=sizes, alpha=0.6, edgecolor=\"k\")\n",
+    "ax.set_aspect(\"equal\")"
    ]
   },
   {
@@ -225,12 +225,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmap = mpl.cm.get_cmap('viridis')\n",
+    "cmap = mpl.cm.get_cmap(\"viridis\")\n",
     "colors = np.linspace(0, 1, 700)\n",
     "sizes = np.linspace(5, 100, 700)\n",
     "fig, ax = plt.subplots(figsize=(8, 5))\n",
     "ax.hist2d(X, Y, bins=[50, 20])\n",
-    "ax.set_aspect('equal')"
+    "ax.set_aspect(\"equal\")"
    ]
   }
  ],
