--- a/2-Data-handling-and-visu/12-Animations.ipynb
+++ b/2-Data-handling-and-visu/12-Animations.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.load('Resources/Turing_pattern.npz')['arr_0'].astype(float)"
+    "A = np.load(\"Resources/Turing_pattern.npz\")[\"arr_0\"].astype(float)"
    ]
   },
   {
@@ -53,8 +53,8 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "ax.axis('off')\n",
-    "ax.imshow(A[:,:, -1], interpolation='bilinear', cmap='magma')"
+    "ax.axis(\"off\")\n",
+    "ax.imshow(A[:, :, -1], interpolation=\"bilinear\", cmap=\"magma\")"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow?"
+    "?plt.imshow"
    ]
   },
   {
@@ -130,19 +130,21 @@
     "from IPython.display import HTML\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "ax.axis('off')\n",
-    "im = ax.imshow(A[..., 0], interpolation='bilinear')\n",
+    "ax.axis(\"off\")\n",
+    "im = ax.imshow(A[..., 0], interpolation=\"bilinear\")\n",
     "fig.tight_layout()\n",
     "\n",
+    "\n",
     "def update(t):\n",
-    "    im.set_data(A_anim[...,t])\n",
-    "    return im,\n",
+    "    im.set_data(A_anim[..., t])\n",
+    "    return (im,)\n",
+    "\n",
     "\n",
     "nb_times_im = 100\n",
-    "A_anim = A[..., ::A.shape[-1]//nb_times_im]\n",
-    "anim = animation.FuncAnimation(fig, update,\n",
-    "                               frames=nb_times_im, interval=50, \n",
-    "                               blit=True)\n",
+    "A_anim = A[..., :: A.shape[-1] // nb_times_im]\n",
+    "anim = animation.FuncAnimation(\n",
+    "    fig, update, frames=nb_times_im, interval=50, blit=True\n",
+    ")\n",
     "HTML(anim.to_jshtml())"
    ]
   },
