--- a/2-Data-handling-and-visu/13-Seaborn.ipynb
+++ b/2-Data-handling-and-visu/13-Seaborn.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = sns.load_dataset('penguins')"
+    "dataset = sns.load_dataset(\"penguins\")"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.sort_values('bill_length_mm')"
+    "dataset.sort_values(\"bill_length_mm\")"
    ]
   },
   {
@@ -53,8 +53,14 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
-    "sns.scatterplot(data=dataset, x='flipper_length_mm', y='bill_depth_mm', hue='species', ax=ax)\n",
-    "ax.set_xlabel('')"
+    "sns.scatterplot(\n",
+    "    data=dataset,\n",
+    "    x=\"flipper_length_mm\",\n",
+    "    y=\"bill_depth_mm\",\n",
+    "    hue=\"species\",\n",
+    "    ax=ax,\n",
+    ")\n",
+    "ax.set_xlabel(\"\")"
    ]
   },
   {
@@ -64,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.swarmplot(data=dataset, x='species', y='bill_depth_mm', hue='sex')"
+    "sns.swarmplot(data=dataset, x=\"species\", y=\"bill_depth_mm\", hue=\"sex\")"
    ]
   },
   {
@@ -74,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot(data=dataset, y='bill_depth_mm', hue='species', multiple='stack')"
+    "sns.histplot(data=dataset, y=\"bill_depth_mm\", hue=\"species\", multiple=\"stack\")"
    ]
   },
   {
@@ -84,7 +90,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot(data=dataset, y='species', hue='sex', discrete=True, multiple='fill')"
+    "sns.histplot(\n",
+    "    data=dataset, y=\"species\", hue=\"sex\", discrete=True, multiple=\"fill\"\n",
+    ")"
    ]
   },
   {
@@ -94,7 +102,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot(data=dataset, y='species', hue='sex', discrete=True, multiple='dodge')"
+    "sns.histplot(\n",
+    "    data=dataset, y=\"species\", hue=\"sex\", discrete=True, multiple=\"dodge\"\n",
+    ")"
    ]
   },
   {
@@ -104,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot(data=dataset, x='bill_depth_mm', kde=True)"
+    "sns.histplot(data=dataset, x=\"bill_depth_mm\", kde=True)"
    ]
   },
   {
@@ -114,7 +124,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.violinplot(data=dataset, y='bill_depth_mm', x='species', inner='points', hue='sex')"
+    "sns.violinplot(\n",
+    "    data=dataset, y=\"bill_depth_mm\", x=\"species\", inner=\"points\", hue=\"sex\"\n",
+    ")"
    ]
   },
   {
@@ -124,8 +136,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.violinplot(data=dataset, y='bill_depth_mm', x='species',\n",
-    "               hue='sex', split=True)"
+    "sns.violinplot(\n",
+    "    data=dataset, y=\"bill_depth_mm\", x=\"species\", hue=\"sex\", split=True\n",
+    ")"
    ]
   },
   {
@@ -137,7 +150,9 @@
    },
    "outputs": [],
    "source": [
-    "sns.lmplot(data=dataset, x='flipper_length_mm', y='bill_depth_mm', hue='species')"
+    "sns.lmplot(\n",
+    "    data=dataset, x=\"flipper_length_mm\", y=\"bill_depth_mm\", hue=\"species\"\n",
+    ")"
    ]
   }
  ],
