--- a/2-Data-handling-and-visu/Untitled.ipynb
+++ b/2-Data-handling-and-visu/Untitled.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.load('Resources/Turing_pattern.npy')"
+    "A = np.load(\"Resources/Turing_pattern.npy\")"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp = A.astype('float16')"
+    "tmp = A.astype(\"float16\")"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savez_compressed('test.npz', tmp)"
+    "np.savez_compressed(\"test.npz\", tmp)"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.load('test.npz')['arr_0']"
+    "A = np.load(\"test.npz\")[\"arr_0\"]"
    ]
   },
   {
