--- a/1-Introduction-to-Python/2-Data-Structures.ipynb
+++ b/1-Introduction-to-Python/2-Data-Structures.ipynb
@@ -58,10 +58,10 @@
    "outputs": [],
    "source": [
     "l1 = [1, 2, 3, 4]\n",
-    "print(f'{l1      = }')\n",
-    "print(f'positions: 0  1  2  3')\n",
-    "print(f'{l1[0] = }')\n",
-    "print(f'{l1[3] = }')"
+    "print(f\"{l1      = }\")\n",
+    "print(f\"positions: 0  1  2  3\")\n",
+    "print(f\"{l1[0] = }\")\n",
+    "print(f\"{l1[3] = }\")"
    ]
   },
   {
@@ -79,10 +79,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'{l1       = }')\n",
-    "print(f'positions: -4 -3 -2 -1')\n",
-    "print(f'{l1[-1] = }')\n",
-    "print(f'{l1[-3] = }')"
+    "print(f\"{l1       = }\")\n",
+    "print(f\"positions: -4 -3 -2 -1\")\n",
+    "print(f\"{l1[-1] = }\")\n",
+    "print(f\"{l1[-3] = }\")"
    ]
   },
   {
@@ -107,12 +107,12 @@
    "outputs": [],
    "source": [
     "l1 = list(range(3, 13))\n",
-    "print(f'{l1          = }')\n",
-    "print(f'positions --> {list(range(len(l1)))}')\n",
-    "print(f'{l1[3:7]     = }')\n",
-    "print(f'{l1[:2]      = }')\n",
-    "print(f'{l1[6:]      = }')\n",
-    "print(f'{l1[1:7:2]   = }')"
+    "print(f\"{l1          = }\")\n",
+    "print(f\"positions --> {list(range(len(l1)))}\")\n",
+    "print(f\"{l1[3:7]     = }\")\n",
+    "print(f\"{l1[:2]      = }\")\n",
+    "print(f\"{l1[6:]      = }\")\n",
+    "print(f\"{l1[1:7:2]   = }\")"
    ]
   },
   {
@@ -131,10 +131,10 @@
    "outputs": [],
    "source": [
     "l1 = [1, 2, 3, 4]\n",
-    "print(f'{l1    = }')\n",
-    "l1.append('hello')\n",
-    "print(f'{l1    = }')\n",
-    "print(f'{l1[4] = }')"
+    "print(f\"{l1    = }\")\n",
+    "l1.append(\"hello\")\n",
+    "print(f\"{l1    = }\")\n",
+    "print(f\"{l1[4] = }\")"
    ]
   },
   {
@@ -153,9 +153,9 @@
    "outputs": [],
    "source": [
     "l1 = [1, 2, 3, 4]\n",
-    "print(f'{l1 = }')\n",
+    "print(f\"{l1 = }\")\n",
     "l1.pop()\n",
-    "print(f'{l1 = }')"
+    "print(f\"{l1 = }\")"
    ]
   },
   {
@@ -174,9 +174,9 @@
    "outputs": [],
    "source": [
     "l1 = [4, 5, 6, 7]\n",
-    "print(f'{l1 = }')\n",
+    "print(f\"{l1 = }\")\n",
     "l1.remove(5)\n",
-    "print(f'{l1 = }')"
+    "print(f\"{l1 = }\")"
    ]
   },
   {
@@ -195,11 +195,11 @@
    "outputs": [],
    "source": [
     "l1 = [1, 2, 3, 4]\n",
-    "print(f'{l1 = }')\n",
+    "print(f\"{l1 = }\")\n",
     "l1[1] = 3\n",
-    "print(f'{l1 = }')\n",
-    "l1[2] = l1[0]+1\n",
-    "print(f'{l1 = }')"
+    "print(f\"{l1 = }\")\n",
+    "l1[2] = l1[0] + 1\n",
+    "print(f\"{l1 = }\")"
    ]
   },
   {
@@ -220,13 +220,13 @@
    "outputs": [],
    "source": [
     "l1 = [1, 2, 3, 4]\n",
-    "l2 = ['a', 'b', 'c', 'd']\n",
+    "l2 = [\"a\", \"b\", \"c\", \"d\"]\n",
     "l3 = l1 + l2\n",
-    "print(f'{l3 = }')\n",
+    "print(f\"{l3 = }\")\n",
     "l1.extend(l2)\n",
-    "print(f'{l1 = }')\n",
+    "print(f\"{l1 = }\")\n",
     "l4 = l1 + l2\n",
-    "print(f'{l4 = }')"
+    "print(f\"{l4 = }\")"
    ]
   },
   {
@@ -247,9 +247,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d1 = {4: '1', '3':'Hello'}\n",
-    "print(f'{d1      = }')\n",
-    "print(f'{d1[4]   = }')\n",
+    "d1 = {4: \"1\", \"3\": \"Hello\"}\n",
+    "print(f\"{d1      = }\")\n",
+    "print(f\"{d1[4]   = }\")\n",
     "print(f\"{d1['3'] = }\")"
    ]
   },
@@ -268,8 +268,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d1 = {1: [1, 2, 3, 4], 4:4}\n",
-    "print(f'{d1 = }')"
+    "d1 = {1: [1, 2, 3, 4], 4: 4}\n",
+    "print(f\"{d1 = }\")"
    ]
   },
   {
@@ -282,7 +282,7 @@
     "try:\n",
     "    d1 = {[1, 2]: 1}\n",
     "except Exception as e:\n",
-    "    print(f'The error was:\\n\\t{e}')"
+    "    print(f\"The error was:\\n\\t{e}\")"
    ]
   },
   {
@@ -300,11 +300,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d1 = {1: [1, 2, 3, 4], 4:4}\n",
-    "print(f'{d1 = }')\n",
+    "d1 = {1: [1, 2, 3, 4], 4: 4}\n",
+    "print(f\"{d1 = }\")\n",
     "d1[3] = 5\n",
     "d1[1].append(5)\n",
-    "print(f'{d1 = }')"
+    "print(f\"{d1 = }\")"
    ]
   },
   {
@@ -360,12 +360,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr1 = np.array([[1, 2, 3], [2, 3, 4]]) # Create an array from a list\n",
-    "arr2 = np.zeros((4, 4))                 # Create an array filled with 0s of size 4x4\n",
-    "arr3 = np.arange(10)                    # Create a 1d array with values from 0 to 9\n",
-    "print(f'arr1 -->\\n{arr1}')\n",
-    "print(f'arr2 -->\\n{arr2}')\n",
-    "print(f'arr3 -->\\n{arr3}')"
+    "arr1 = np.array([[1, 2, 3], [2, 3, 4]])  # Create an array from a list\n",
+    "arr2 = np.zeros((4, 4))  # Create an array filled with 0s of size 4x4\n",
+    "arr3 = np.arange(10)  # Create a 1d array with values from 0 to 9\n",
+    "print(f\"arr1 -->\\n{arr1}\")\n",
+    "print(f\"arr2 -->\\n{arr2}\")\n",
+    "print(f\"arr3 -->\\n{arr3}\")"
    ]
   },
   {
@@ -388,9 +388,9 @@
    "outputs": [],
    "source": [
     "arr1 = np.arange(16).reshape(4, 4)\n",
-    "print(f'arr1 -->\\n{arr1}')\n",
+    "print(f\"arr1 -->\\n{arr1}\")\n",
     "arr1 = arr1 + 2\n",
-    "print(f'arr1 -->\\n{arr1}')"
+    "print(f\"arr1 -->\\n{arr1}\")"
    ]
   },
   {
@@ -409,9 +409,9 @@
    "outputs": [],
    "source": [
     "arr1 = np.arange(16)\n",
-    "print(f'arr1 -->\\n{arr1}')\n",
-    "print(f'arr1 (reshape(4,  4)) -->\\n{arr1.reshape(4, 4)}')\n",
-    "print(f'arr1 (reshape(2, -1)) -->\\n{arr1.reshape(2, -1)}')"
+    "print(f\"arr1 -->\\n{arr1}\")\n",
+    "print(f\"arr1 (reshape(4,  4)) -->\\n{arr1.reshape(4, 4)}\")\n",
+    "print(f\"arr1 (reshape(2, -1)) -->\\n{arr1.reshape(2, -1)}\")"
    ]
   },
   {
@@ -430,11 +430,11 @@
    "outputs": [],
    "source": [
     "arr1 = np.arange(16).reshape(4, 4)\n",
-    "print(f'arr1 -->\\n{arr1}')\n",
+    "print(f\"arr1 -->\\n{arr1}\")\n",
     "arr2 = arr1 * 2\n",
-    "print(f'arr1 * 2 -->\\n{arr2}')\n",
-    "arr3 = arr1 ** 2\n",
-    "print(f'arr1 ** 2 -->\\n{arr3}')"
+    "print(f\"arr1 * 2 -->\\n{arr2}\")\n",
+    "arr3 = arr1**2\n",
+    "print(f\"arr1 ** 2 -->\\n{arr3}\")"
    ]
   },
   {
@@ -457,9 +457,9 @@
     "arr1 = np.arange(16).reshape(4, 4)\n",
     "arr2 = np.arange(16, 32).reshape(4, 4)\n",
     "arr3 = arr1 * arr2\n",
-    "print(f'arr1 -->\\n{arr1}')\n",
-    "print(f'arr2 -->\\n{arr2}')\n",
-    "print(f'arr1 * arr2 -->\\n{arr3}')"
+    "print(f\"arr1 -->\\n{arr1}\")\n",
+    "print(f\"arr2 -->\\n{arr2}\")\n",
+    "print(f\"arr1 * arr2 -->\\n{arr3}\")"
    ]
   },
   {
@@ -485,11 +485,11 @@
     "arr2 = np.arange(8).reshape(4, 2)\n",
     "arr3 = arr1 @ arr2\n",
     "arr4 = arr2 @ arr1\n",
-    "print(f'arr1 -->\\n{arr1}')\n",
-    "print(f'arr2 -->\\n{arr2}')\n",
-    "print(f'arr1 @ arr2 -->\\n{arr3}')\n",
-    "print(f'np.dot(arr1, arr2) -->\\n{np.dot(arr1, arr2)}')\n",
-    "print(f'arr2 @ arr1 -->\\n{arr4}')"
+    "print(f\"arr1 -->\\n{arr1}\")\n",
+    "print(f\"arr2 -->\\n{arr2}\")\n",
+    "print(f\"arr1 @ arr2 -->\\n{arr3}\")\n",
+    "print(f\"np.dot(arr1, arr2) -->\\n{np.dot(arr1, arr2)}\")\n",
+    "print(f\"arr2 @ arr1 -->\\n{arr4}\")"
    ]
   },
   {
@@ -507,16 +507,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr1 = np.array([[6, 1, 1, 3],\n",
-    "                 [4, -2, 5, 1],\n",
-    "                 [2, 8, 7, 6],\n",
-    "                 [3, 1, 9, 7]])\n",
-    "print(f'arr1 -->\\n{arr1}\\n')\n",
+    "arr1 = np.array([[6, 1, 1, 3], [4, -2, 5, 1], [2, 8, 7, 6], [3, 1, 9, 7]])\n",
+    "print(f\"arr1 -->\\n{arr1}\\n\")\n",
     "det = np.linalg.det(arr1)\n",
     "arr1_inv = np.linalg.inv(arr1)\n",
-    "print(f'arr1 determinant -->\\n{det}\\n')\n",
-    "print(f'arr1_inv -->\\n{arr1_inv}\\n')\n",
-    "print(f'arr1 . arr1_inv -->\\n{np.round(arr1 @ arr1_inv)}\\n')"
+    "print(f\"arr1 determinant -->\\n{det}\\n\")\n",
+    "print(f\"arr1_inv -->\\n{arr1_inv}\\n\")\n",
+    "print(f\"arr1 . arr1_inv -->\\n{np.round(arr1 @ arr1_inv)}\\n\")"
    ]
   }
  ],
