--- a/1-Introduction-to-Python/8-Playing-with-the-model.ipynb
+++ b/1-Introduction-to-Python/8-Playing-with-the-model.ipynb
@@ -37,6 +37,7 @@
     "# importing the numpy library\n",
     "import numpy as np\n",
     "from scipy.ndimage import convolve\n",
+    "\n",
     "# importing the useful functions\n",
     "from Resources.UsefulFunctions import *\n",
     "from Resources.Answers import answer, hint\n",
@@ -44,19 +45,20 @@
     "# and carrying over the previously declared variables\n",
     "mu_a = 2.8e-4\n",
     "mu_i = 5e-3\n",
-    "tau = .1\n",
-    "k = -.005\n",
+    "tau = 0.1\n",
+    "k = -0.005\n",
     "size = 100\n",
-    "dx = dy = 2. / size\n",
+    "dx = dy = 2.0 / size\n",
     "T = 9.0\n",
-    "dt = .001\n",
+    "dt = 0.001\n",
     "n = int(T / dt)\n",
+    "\n",
     "\n",
     "# redeclaring the diffusion function (put yours here)\n",
     "def diffusion(arr, nb_neighbs, kernel, mu, dx, dy):\n",
-    "    to_cell = convolve(arr, kernel, mode='constant', cval=0)\n",
-    "    from_cell = nb_neighbs*arr\n",
-    "    out = mu*(to_cell - from_cell)/(dx*dy)\n",
+    "    to_cell = convolve(arr, kernel, mode=\"constant\", cval=0)\n",
+    "    from_cell = nb_neighbs * arr\n",
+    "    out = mu * (to_cell - from_cell) / (dx * dy)\n",
     "    return out"
    ]
   },
@@ -68,12 +70,12 @@
    "outputs": [],
    "source": [
     "T = 40\n",
-    "dt = .01\n",
+    "dt = 0.01\n",
     "tau = 2\n",
-    "k = .05\n",
-    "A, I = answer_results(17, dt=dt, k=k, tau=tau,\n",
-    "                      size=size, T=T, mu_a=mu_a,\n",
-    "                      mu_i=mu_i, dx=dx, dy=dy)\n"
+    "k = 0.05\n",
+    "A, I = answer_results(\n",
+    "    17, dt=dt, k=k, tau=tau, size=size, T=T, mu_a=mu_a, mu_i=mu_i, dx=dx, dy=dy\n",
+    ")"
    ]
   },
   {
@@ -87,23 +89,26 @@
     "from IPython.display import HTML\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "ax.axis('off')\n",
-    "im = ax.imshow(A[..., 0], interpolation='bilinear')\n",
+    "ax.axis(\"off\")\n",
+    "im = ax.imshow(A[..., 0], interpolation=\"bilinear\")\n",
     "fig.tight_layout()\n",
+    "\n",
     "\n",
     "def init():\n",
     "    im.set_data(A_anim[..., 0])\n",
-    "    return(im,)\n",
+    "    return (im,)\n",
+    "\n",
     "\n",
     "def animate(i):\n",
-    "    im.set_data(A_anim[...,i])\n",
-    "    return(im,)\n",
+    "    im.set_data(A_anim[..., i])\n",
+    "    return (im,)\n",
+    "\n",
     "\n",
     "nb_times_im = 50\n",
-    "A_anim = A[..., ::A.shape[-1]//nb_times_im]\n",
-    "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
-    "                               frames=nb_times_im, interval=25, \n",
-    "                               blit=True)\n",
+    "A_anim = A[..., :: A.shape[-1] // nb_times_im]\n",
+    "anim = animation.FuncAnimation(\n",
+    "    fig, animate, init_func=init, frames=nb_times_im, interval=25, blit=True\n",
+    ")\n",
     "\n",
     "HTML(anim.to_jshtml())"
    ]
@@ -136,38 +141,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_turing_kernel(dt, k, tau, size, T,\n",
-    "                          mu_a, mu_i, dx, dy,\n",
-    "                          kernel, seed=0):\n",
-    "    n = int(T/dt)\n",
+    "def compute_turing_kernel(\n",
+    "    dt, k, tau, size, T, mu_a, mu_i, dx, dy, kernel, seed=0\n",
+    "):\n",
+    "    n = int(T / dt)\n",
     "    A = np.zeros((size, size, n))\n",
     "    I = np.zeros((size, size, n))\n",
     "    np.random.seed(seed)\n",
     "    A[:, :, 0] = np.random.random((size, size))\n",
-    "    np.random.seed(seed+1)\n",
+    "    np.random.seed(seed + 1)\n",
     "    I[:, :, 0] = np.random.random((size, size))\n",
     "\n",
     "    mask = np.ones_like(A[:, :, 0])\n",
-    "    nb_neighbs = convolve(mask, kernel, mode='constant', cval=0)\n",
+    "    nb_neighbs = convolve(mask, kernel, mode=\"constant\", cval=0)\n",
     "\n",
     "    for t in range(1, n):\n",
-    "        diff_A = diffusion(A[:, :, t-1], nb_neighbs, kernel, mu_a, dx, dy)\n",
-    "        A[..., t] = A[..., t-1] + dt*(diff_A + A[..., t-1] - A[..., t-1]**3 - I[..., t-1] + k)\n",
-    "        diff_I = diffusion(I[:, :, t-1], nb_neighbs, kernel, mu_i, dx, dy)\n",
-    "        I[..., t] = I[..., t-1] + dt/tau*(diff_I + A[..., t-1] - I[..., t-1])\n",
-    "\n",
+    "        diff_A = diffusion(A[:, :, t - 1], nb_neighbs, kernel, mu_a, dx, dy)\n",
+    "        A[..., t] = A[..., t - 1] + dt * (\n",
+    "            diff_A + A[..., t - 1] - A[..., t - 1] ** 3 - I[..., t - 1] + k\n",
+    "        )\n",
+    "        diff_I = diffusion(I[:, :, t - 1], nb_neighbs, kernel, mu_i, dx, dy)\n",
+    "        I[..., t] = I[..., t - 1] + dt / tau * (\n",
+    "            diff_I + A[..., t - 1] - I[..., t - 1]\n",
+    "        )\n",
     "\n",
     "    return A, I\n",
     "\n",
+    "\n",
     "T = 200\n",
-    "dt = .025\n",
+    "dt = 0.025\n",
     "tau = 2\n",
-    "k = .05\n",
-    "kernel = [[0,  .5,  0],\n",
-    "          [1,   0,  0],\n",
-    "          [0,  .5,  0]]\n",
+    "k = 0.05\n",
+    "kernel = [[0, 0.5, 0], [1, 0, 0], [0, 0.5, 0]]\n",
     "A, I = compute_turing_kernel(dt, k, tau, size, T, mu_a, mu_i, dx, dy, kernel)\n",
-    "#Note that the only change we made was to change the kernel"
+    "# Note that the only change we made was to change the kernel"
    ]
   },
   {
@@ -178,23 +185,26 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "ax.axis('off')\n",
-    "im = ax.imshow(A[..., 0], interpolation='bilinear')\n",
+    "ax.axis(\"off\")\n",
+    "im = ax.imshow(A[..., 0], interpolation=\"bilinear\")\n",
     "fig.tight_layout()\n",
+    "\n",
     "\n",
     "def init():\n",
     "    im.set_data(A_anim[..., 0])\n",
-    "    return(im,)\n",
+    "    return (im,)\n",
+    "\n",
     "\n",
     "def animate(i):\n",
-    "    im.set_data(A_anim[...,i])\n",
-    "    return(im,)\n",
+    "    im.set_data(A_anim[..., i])\n",
+    "    return (im,)\n",
+    "\n",
     "\n",
     "nb_times_im = 100\n",
-    "A_anim = A[..., ::A.shape[-1]//nb_times_im]\n",
-    "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
-    "                               frames=nb_times_im, interval=25, \n",
-    "                               blit=True)\n",
+    "A_anim = A[..., :: A.shape[-1] // nb_times_im]\n",
+    "anim = animation.FuncAnimation(\n",
+    "    fig, animate, init_func=init, frames=nb_times_im, interval=25, blit=True\n",
+    ")\n",
     "\n",
     "HTML(anim.to_jshtml())"
    ]
@@ -225,39 +235,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_turing_kernel(dt, k, tau, size, T,\n",
-    "                          mu_a, mu_i, dx, dy,\n",
-    "                          kernel, seed=0):\n",
-    "    n = int(T/dt)\n",
+    "def compute_turing_kernel(\n",
+    "    dt, k, tau, size, T, mu_a, mu_i, dx, dy, kernel, seed=0\n",
+    "):\n",
+    "    n = int(T / dt)\n",
     "    A = np.zeros((size, size, n))\n",
     "    I = np.zeros((size, size, n))\n",
     "    np.random.seed(seed)\n",
     "    A[:, :, 0] = np.random.random((size, size))\n",
-    "    np.random.seed(seed+1)\n",
+    "    np.random.seed(seed + 1)\n",
     "    I[:, :, 0] = np.random.random((size, size))\n",
     "\n",
     "    mask = np.ones_like(A[:, :, 0])\n",
-    "    nb_neighbs = convolve(mask, kernel, mode='constant', cval=0)\n",
+    "    nb_neighbs = convolve(mask, kernel, mode=\"constant\", cval=0)\n",
     "\n",
     "    for t in range(1, n):\n",
-    "        diff_A = diffusion(A[:, :, t-1], nb_neighbs, kernel, mu_a, dx, dy)\n",
-    "        A[..., t] = A[..., t-1] + dt*(diff_A + A[..., t-1] - A[..., t-1]**3 - I[..., t-1] + k)\n",
-    "        diff_I = diffusion(I[:, :, t-1], nb_neighbs, kernel, mu_i, dx, dy)\n",
-    "        I[..., t] = I[..., t-1] + dt/tau*(diff_I + A[..., t-1] - I[..., t-1])\n",
+    "        diff_A = diffusion(A[:, :, t - 1], nb_neighbs, kernel, mu_a, dx, dy)\n",
+    "        A[..., t] = A[..., t - 1] + dt * (\n",
+    "            diff_A + A[..., t - 1] - A[..., t - 1] ** 3 - I[..., t - 1] + k\n",
+    "        )\n",
+    "        diff_I = diffusion(I[:, :, t - 1], nb_neighbs, kernel, mu_i, dx, dy)\n",
+    "        I[..., t] = I[..., t - 1] + dt / tau * (\n",
+    "            diff_I + A[..., t - 1] - I[..., t - 1]\n",
+    "        )\n",
     "        # Here is our simple addition\n",
     "        A[:, -1, t] = A[:, 0, t]\n",
     "        I[:, -1, t] = I[:, 0, t]\n",
     "\n",
-    "\n",
     "    return A, I\n",
     "\n",
+    "\n",
     "T = 600\n",
-    "dt = .1\n",
+    "dt = 0.1\n",
     "tau = 3\n",
-    "k = .05\n",
-    "kernel = [[0,  .5,  0],\n",
-    "          [1,   0,  0],\n",
-    "          [0,  .5,  0]]\n",
+    "k = 0.05\n",
+    "kernel = [[0, 0.5, 0], [1, 0, 0], [0, 0.5, 0]]\n",
     "A, I = compute_turing_kernel(dt, k, tau, size, T, mu_a, mu_i, dx, dy, kernel)"
    ]
   },
@@ -269,23 +281,26 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "ax.axis('off')\n",
-    "im = ax.imshow(A[..., 0], interpolation='bilinear')\n",
+    "ax.axis(\"off\")\n",
+    "im = ax.imshow(A[..., 0], interpolation=\"bilinear\")\n",
     "fig.tight_layout()\n",
+    "\n",
     "\n",
     "def init():\n",
     "    im.set_data(A_anim[..., 0])\n",
-    "    return(im,)\n",
+    "    return (im,)\n",
+    "\n",
     "\n",
     "def animate(i):\n",
-    "    im.set_data(A_anim[...,i])\n",
-    "    return(im,)\n",
+    "    im.set_data(A_anim[..., i])\n",
+    "    return (im,)\n",
+    "\n",
     "\n",
     "nb_times_im = 100\n",
-    "A_anim = A[..., ::A.shape[-1]//nb_times_im]\n",
-    "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
-    "                               frames=nb_times_im, interval=25, \n",
-    "                               blit=True)\n",
+    "A_anim = A[..., :: A.shape[-1] // nb_times_im]\n",
+    "anim = animation.FuncAnimation(\n",
+    "    fig, animate, init_func=init, frames=nb_times_im, interval=25, blit=True\n",
+    ")\n",
     "\n",
     "HTML(anim.to_jshtml())"
    ]
@@ -305,7 +320,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A, I = compute_turing_kernel(dt, k, tau, size, T, mu_a, mu_i, dx, dy, kernel, seed=2)"
+    "A, I = compute_turing_kernel(\n",
+    "    dt, k, tau, size, T, mu_a, mu_i, dx, dy, kernel, seed=2\n",
+    ")"
    ]
   },
   {
@@ -316,23 +333,26 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "ax.axis('off')\n",
-    "im = ax.imshow(A[..., 0], interpolation='bilinear')\n",
+    "ax.axis(\"off\")\n",
+    "im = ax.imshow(A[..., 0], interpolation=\"bilinear\")\n",
     "fig.tight_layout()\n",
+    "\n",
     "\n",
     "def init():\n",
     "    im.set_data(A_anim[..., 0])\n",
-    "    return(im,)\n",
+    "    return (im,)\n",
+    "\n",
     "\n",
     "def animate(i):\n",
-    "    im.set_data(A_anim[...,i])\n",
-    "    return(im,)\n",
+    "    im.set_data(A_anim[..., i])\n",
+    "    return (im,)\n",
+    "\n",
     "\n",
     "nb_times_im = 100\n",
-    "A_anim = A[..., ::A.shape[-1]//nb_times_im]\n",
-    "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
-    "                               frames=nb_times_im, interval=25, \n",
-    "                               blit=True)\n",
+    "A_anim = A[..., :: A.shape[-1] // nb_times_im]\n",
+    "anim = animation.FuncAnimation(\n",
+    "    fig, animate, init_func=init, frames=nb_times_im, interval=25, blit=True\n",
+    ")\n",
     "\n",
     "HTML(anim.to_jshtml())"
    ]
